testdata/zkc/invalid/field_01.zkc
//error:3:13-14:expected type u32
fn f(x:u32) -> (r:𝔽) {
    r = x + 1
    return
}
